src/App.css
body{
  margin: 0px;
  font-family: 'Roboto', sans-serif;
}

/* Scroll bar */
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1; 
}

::-webkit-scrollbar-thumb {
  background: #888; 
}

::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

/* NAV styles
nav {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  background-color: #ffffff;
  padding-right: 10px;
  height: 60px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
  z-index: 1;
  margin-bottom: 0px;
}

nav.dark {
  background-color: #21222A;
}

.nav--logo_icon {
  width: 30px;
  margin-right: 10px;
}

.nav--logo_text {
  color: #61DAFB;
  margin-right: auto;
}

.nav--title {
  color: #DEEBF8;
}

.toggler {
  display: flex;
  align-items: center;
}

.toggler p {
  font-size: 0.625rem;
  font-weight: 600;
}

.toggler--slider {
  width: 25px;
  height: 13px;
  background-color: #2B283A;
  border-radius: 2rem;
  margin-inline: 7px;
  cursor: pointer;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  border: 1px solid black;
  box-sizing: content-box;
}

nav.dark .toggler--slider {
  border-color: white;
  background-color: #F5F5F5;
}

.toggler--slider--circle {
  height: 13px;
  width: 13px;
  background-color: white;
  border-radius: 50%;
}

nav.dark .toggler--slider--circle {
  background-color: black;
}

.toggler--light {
  color: #2B283A;
}

nav.dark .toggler--light {
  color: #918E9B;
}

.toggler--dark {
  color: #D5D4D8;
}

nav.dark .toggler-dark {
  color: #FFFFFF;
}

nav.dark .toggler--slider {
  justify-content: flex-end;
}
 */
/* End of Nav Styles */

/* main table */
.periodic__div
{
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  width: 100%;
  color: #DEEBF8;
  background: radial-gradient(#636669, #252627);
  align-content: center;
  justify-content: flex-start;
  align-items: flex-start;
  overflow-x: scroll;
  height: 100vh;
  overflow-y: scroll;
}


.group__header__item
{
  min-width: 73px;
  color: #ffffff;
  min-height: 40px;
  background: #2b2d2e;
  box-shadow: 0 0 0.5rem #252627;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  border-left: 1px solid;
  border-top: 1px solid;
  border-bottom: 1px solid;
  text-align: center;
  font-size: 18px;
  position: sticky;
  top: 0px;
  z-index: 3;
}

.group__header__item:last-child
{
  border-right: 1px solid;
}


.group__header__item > span
{
  font-size: 10px;
  transform: rotate(45deg);
}
.group__header__item > span:first-child
{
  text-decoration: underline;
}

.period__header__item
{
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-width: 40px;
  min-height: 5rem;
  font-size: 18px;
  text-align: center;
  border-bottom: 1px solid;
  border-left: 1px solid;
  border-right: 1px solid;
  background: #2b2d2e;
  box-shadow: 0 0 0.5rem #252627;
  z-index: 3;
  padding-block: 10px 0px;
}

.group__container
{
  display: flex;
  flex-direction: column;
}

#groupHeader
{
  position: sticky;
  left: 0px;
}

#group_header_block
{
  position: -webkit-sticky;
  position: sticky;
  left:0;
  top: 0px;
  border-right:1px solid;
  font-size: 16px;
  min-width: auto;
  z-index: 4;
}

/* Element Classes */

.periodicElement
{
  height: 5rem;
  width: 5rem;
  /* background-color: #636669; */
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-content: center;
  /* justify-content: center; */
  align-items: center;
  font-size: 14px;
  margin: 2.5px;
}

.emptyElement
{
  height: 5rem;
  width: 5rem;
  margin: 2.5px;
  background-color:transparent;
  border: 3px solid transparent;
}

.element__number
{
  font-size: 12px;
  align-self: flex-start;
  margin-left: 2px;
  margin-top: 2px;
}

.element__symbol
{
  text-align: center;
  word-break: break-word;
  font-size: 22px;
}

.element__name
{
  word-break: break-word;
  margin-left: 2px;
}

.gas
{
  border: 3px dashed;
}

.solid
{
  border: 3px double;
}

.liquid
{
  border: 3px solid;
}

.unknown__phase
{
  border: 3px;
  border-style: dotted dashed solid double;
}

.alkali__metal
{
  color: #e74d3c;
  border-color: #e74d3c;
}

.diatomic__nonmetal
{
  color: #95a6a7;
  border-color: #95a6a7;
}

.alkaline__earth__metal
{
  color: #e77e23;
  border-color: #e77e23;
}

.transition__metal
{
  color: #f1c40e;
  border-color: #f1c40e;
}

.metalloid
{
  color: #3398db;
  border-color: #3398db;
}

.polyatomic__nonmetal
{
  color: #95a6a7;
  border-color: #95a6a7;
}

.noble__gas
{
  color: #8d43ad;
  border-color: #8d43ad;
}

.post__transition__metal
{
  color: #1abc9c;
  border-color: #1abc9c;
}

.actinide
{
  color: #ea9971;
  border-color: #ea9971;
}

.lanthanide
{
  color: #f4c3a9;
  border-color: #f4c3a9;
}

.unknown__catrgory
{
  color: #b7950b;
  border-color: #b7950b;
}

/* Control Item */
.control__item__container
{
  height: 15rem;
  background-color: transparent;
  display: flex;
  flex-direction: column;
  width: 45rem;
  position: absolute;
  top: 4rem;
  left: 20rem;
  color: white;
}

.block__container
{
  height: 10rem;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.element__description
{
  border: 3px solid;
  height: 8rem;
  width: 8rem;
}

.ed__atomic_number
{
  font-size: 14px;
  margin-left: 4px;
  margin-top: 4px;
}

.slider__container
{
  height: 5rem;
  width: 100%;
  display: flex;
}

.slider__block
{
  width: 100%;
  padding: 5px;
}
.temperature__slider
{
  border-radius: 5px;
  width: 100%;
}

